Add Community Forums Page #743

--- a/frontend/components/navbar.html
+++ b/frontend/components/navbar.html
@@ -47,6 +47,15 @@
         </ul>
       </li>
 
+      <li class="nav-group">
+        <a href="#" class="nav-link">Community <i class="fas fa-chevron-down arrow-icon"></i></a>
+        <ul class="dropdown">
+          <li><a href="pages/community/index.html">Community Feed</a></li>
+          <li><a href="pages/community/forums.html">Discussion Forums</a></li>
+          <li><a href="pages/community/dashboard.html">My Dashboard</a></li>
+        </ul>
+      </li>
+
       <li class="nav-group"><a href="pages/games/kids-zone.html" class="nav-link">Kids Zone</a></li>
       <li class="nav-group"><a href="pages/contact.html" class="nav-link">Contact</a></li>
 
