--- a/frontend/components/navbar.html
+++ b/frontend/components/navbar.html
@@ -46,6 +46,7 @@
           <li><a href="pages/animal-safety/exotic-animals.html">Exotic Animals</a></li>
           <li><a href="pages/animal-safety/anti-poaching.html">Anti-Poaching Efforts</a></li>
           <li><a href="pages/animal-safety/animal-welfare-laws.html">Animal Welfare Laws</a></li>
+          <li><a href="pages/animal-safety/captive-animals-wellbeing.html">🧠 Captive Animals Well-Being</a></li>
           <li><a href="pages/animal-safety/animal-therapy.html">Animal Therapy Programs</a></li>
           <li><a href="pages/animal-safety/wildlife-photography-ethics.html">Wildlife Photography Ethics</a></li>
           <li><a href="pages/visual-mueseum.html">Virtual Museum</a></li>
