Fix: Add Eco-Travel Route Planner feature #1446

--- a/frontend/components/navbar.html
+++ b/frontend/components/navbar.html
@@ -34,6 +34,7 @@
           <li><a href="pages/visual-mueseum.html">Virtual Museum</a></li>
           <li><a href="pages/environment/environment.html">Environment</a></li>
           <li><a href="pages/plant-care.html">Plant Care</a></li>
+          <li><a href="pages/eco-travel.html">Eco Travel Planner</a></li>
           <li><a href="pages/feeding-awareness.html">Feeding Awareness</a></li>
         </ul>
       </li>
