--- a/frontend/components/navbar.html
+++ b/frontend/components/navbar.html
@@ -35,6 +35,7 @@
           <li><a href="pages/environment/environment.html">Environment</a></li>
           <li><a href="pages/plant-care.html">Plant Care</a></li>
           <li><a href="pages/feeding-awareness.html">Feeding Awareness</a></li>
+          <li><a href="pages/eco-chef.html">Eco-Chef Recipes</a></li>
         </ul>
       </li>
 
